--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=ToKeepTheHopeAlive
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ZolRIQUkNlV51fM9E+/fyVbdHiuetu7i41R7HIYYcQU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
