--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
         "lint": "eslint . --fix",
         "types": "tsc --noEmit"
     },
+    "keywords": [
+        "hope",
+        "testimonies"
+    ],
+    "author": "Gillyware, LLC",
+    "license": "proprietary",
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@types/lodash": "^4.17.16",
