set up larastan

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.23",
+        "larastan/larastan": "^3.3",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
         "laravel/sail": "^1.41",
@@ -82,10 +83,16 @@
             "npm run format"
         ],
         "check": [
+            "./vendor/bin/phpstan analyse --memory-limit=2G",
             "npm run lint"
         ],
         "test": [
             "php artisan test"
+        ],
+        "sweep": [
+            "composer format",
+            "composer check",
+            "composer test"
         ]
     },
     "extra": {
