--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
+        "peckphp/peck": "^0.1.3",
         "phpunit/phpunit": "^11.5.3"
     },
     "autoload": {
@@ -84,6 +85,7 @@
         ],
         "check": [
             "./vendor/bin/phpstan analyse --memory-limit=2G",
+            "./vendor/bin/peck",
             "npm run lint"
         ],
         "test": [
