--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,11 +26,15 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          sudo apt-get install aspell aspell-en
           composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
           npm install
 
       - name: Run Pint
         run: vendor/bin/pint
+
+      - name: Run Larastan
+        run: vendor/bin/phpstan analyse --memory-limit=2G
 
       - name: Run Peck
         run: vendor/bin/peck
