--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "mews/purifier": "^3.4",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
