--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
         "concurrently": "^9.0.1",
         "dompurify": "^3.2.5",
         "fs-extra": "^11.3.0",
-        "globals": "^15.14.0",
+        "globals": "^16.0.0",
         "laravel-vite-plugin": "^1.0",
         "lodash": "^4.17.21",
-        "lucide-react": "^0.475.0",
+        "lucide-react": "^0.501.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^3.0.1",
@@ -70,7 +70,7 @@
         "vite": "^6.0"
     },
     "optionalDependencies": {
-        "@rollup/rollup-linux-x64-gnu": "4.9.5",
+        "@rollup/rollup-linux-x64-gnu": "^4.40.0",
         "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
         "lightningcss-linux-x64-gnu": "^1.29.1"
     }
