--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@sentry/react": "^9.13.0",
+        "@sentry/vite-plugin": "^3.3.1",
         "@tailwindcss/vite": "^4.0.6",
         "@tinymce/tinymce-react": "^6.1.0",
         "@types/react": "^19.0.3",
